[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
near-sdk = { version = "4.1.0", features = ["unstable"] }
schemars = "0.8"

[dev-dependencies]
zstd = "0.11"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.3.0"
serde_json = "1.0"
workspaces = "0.6.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
